# deepseek-code-agent

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: clarifier.rs  executor.rs  mod.rs  planner.rs  types.rs
src-tauri/src/commands/: chat.rs  config.rs  mod.rs  plan.rs  project.rs
src-tauri/src/db/: mod.rs  models.rs  repo.rs
src-tauri/src/llm/: client.rs  mod.rs  types.rs
src-tauri/src/project/: manager.rs
src-tauri/src/security/: command.rs
src-tauri/src/templates/: axum_site.rs  mod.rs  tauri_app.rs
src-tauri/src/tools/: cmd_tool.rs  file_tool.rs  mod.rs
src/components/: ApiKeySetup.tsx  Chat.tsx  Clarification.tsx  CommandConfirmation.tsx  PlanApproval.tsx  ProjectList.tsx
src/hooks/: useTheme.ts
src/services/: tauriCommands.ts
src/types/: index.ts
